# Ap4A

./: .gitignore  CMakeLists.txt  Main  README.md
src/: DataBase.cpp  DataBase.hpp  Main.cpp
src/Groups/: Groups.cpp  Groups.hpp  Students.cpp
src/People/: Badge.cpp  Badge.hpp  User.cpp  User.hpp
src/Server/: Lecteurs.cpp  Lecteurs.hpp  Server.cpp  Server.hpp
src/Structure/: Batiment.cpp  Batiment.hpp  Salle.cpp  Salle.hpp
